# typestate-rs-examples

./: Cargo.toml  Makefile  README.md
examples/: README.md  door.rs  vending_machine.rs
