[package]
name = "typestate-rs-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
typestate = { git = "https://github.com/rustype/typestate-rs.git" }

[features]
export-diagrams = [
    "typestate/export-mermaid",
    "typestate/export-dot",
    "typestate/export-plantuml",
]
