[package]
name = "typestate-rs-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
typestate = "0.8"

[features]
export-diagrams = [
    "typestate/export-mermaid",
    "typestate/export-dot",
    "typestate/export-plantuml",
]

[patch.crates-io]
typestate = { git = "https://github.com/rustype/typestate-rs.git" }
